--- a/Acuerian.html
+++ b/Acuerian.html
@@ -25,5 +25,9 @@
             <img class="logo2" src="src/images/logo2.png" alt="Logo"/>
          </div>
       </div>
+      <div class="scroll-text">
+         Scroll
+      </div>
+      <div class="scroll-down"></div>
    </body>
 </html>
