--- a/Acuerian.html
+++ b/Acuerian.html
@@ -7,27 +7,34 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    </head>
    <body>
-      <input type="checkbox" id="active">
-      <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
-      <video autoplay loop muted play-inline preload="metadata" class="back-video">
-         <source src="src/videos/pexels-mart-production-7565445 (1080p).mp4">
-      </video>
-      <div class="base">
-         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact Us</a></li>
-         </ul>
-      </div>
-      <div class="content">
-         <div class="logo">
-            <img class="logo2" src="src/images/logo2.png" alt="Logo"/>
+      <div class="all" id="p1">
+         <input type="checkbox" id="active">
+         <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
+         <video autoplay loop muted play-inline preload="metadata" class="back-video">
+            <source src="src/videos/pexels-mart-production-7565445 (1080p).mp4">
+         </video>
+         <div class="base">
+            <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="#">Gallery</a></li>
+               <li><a href="#">Contact Us</a></li>
+            </ul>
          </div>
+         <div class="content">
+            <div class="logo">
+               <img class="logo2" src="src/images/logo2.png" alt="Logo"/>
+            </div>
+         </div>
+         <div class="scroll-text">
+            Scroll
+         </div>
+         <div class="scroll-down"></div>
       </div>
-      <div class="scroll-text">
-         Scroll
-      </div>
-      <div class="scroll-down"></div>
+      <section class="test" id="die">
+         <div class="opener" id="open">
+            About Us section(Place Holder)
+         </div>
+      </section>
    </body>
 </html>
