--- a/Acuerian.html
+++ b/Acuerian.html
@@ -5,6 +5,7 @@
       <title>Acuerian</title>
       <link rel="stylesheet" href="src/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
    </head>
    <body>
       <div class="all" id="p1">
@@ -31,10 +32,8 @@
          </div>
          <div class="scroll-down"></div>
       </div>
-      <section class="test" id="die">
-         <div class="opener" id="open">
-            About Us section(Place Holder)
-         </div>
+      <section class="about" id="about-us">
+         <h2>Our Mission</h2>
       </section>
    </body>
 </html>
