--- a/Acuerian.html
+++ b/Acuerian.html
@@ -5,7 +5,7 @@
       <title>Acuerian</title>
       <link rel="stylesheet" href="src/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-      <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+      <script defer src="src/activity.js"></script>
    </head>
    <body>
       <div class="all" id="p1">
@@ -34,6 +34,7 @@
       </div>
       <section class="about" id="about-us">
          <h2>Our Mission</h2>
+         <p>With the aim and goal to spread mental health awareness to all</p>
       </section>
    </body>
 </html>
