--- a/Acuerian.html
+++ b/Acuerian.html
@@ -36,5 +36,19 @@
          <h2>Our Mission</h2>
          <p>With the aim and goal to spread mental health awareness to all</p>
       </section>
+      <section class="gallery" id="gallery-page">
+         <h2 class="h2">Gallery</h2>
+         <div class="slideshow-container">
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7207.JPG" alt="Image 1">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7208.JPG" alt="Image 2">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7209.JPG" alt="Image 3">
+            </div>
+         </div>
+      </section>
    </body>
 </html>
