--- a/Acuerian.html
+++ b/Acuerian.html
@@ -110,7 +110,7 @@
             <a href="">F.A.Q</a>
             <a href="">Cookies Policy</a>
             <a href="">Terms Of Service</a>
-            <a href="">Support</a>
+            <a href="#foot">Support</a>
           
             </div>
              <p>Copyright &copy; 2023</p>
