--- a/Acuerian.html
+++ b/Acuerian.html
@@ -48,13 +48,40 @@
          <h2 class="h2">Gallery</h2>
          <div class="slideshow-container">
             <div class="mySlides">
-               <img src="src/images/Pics for Jaydon’s group/IMG_7207.JPG" alt="Image 1">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7228.JPG" alt="Image 1">
             </div>
             <div class="mySlides">
-               <img src="src/images/Pics for Jaydon’s group/IMG_7208.JPG" alt="Image 2">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7215.JPG" alt="Image 2">
             </div>
             <div class="mySlides">
-               <img src="src/images/Pics for Jaydon’s group/IMG_7209.JPG" alt="Image 3">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7242.JPG" alt="Image 3">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7245.JPG" alt="Image 4">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7263.JPG" alt="Image 5">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7261.JPG" alt="Image 6">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7277.JPG" alt="Image 7">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7287.JPG" alt="Image 8">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7309.JPG" alt="Image 9">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7280.JPG" alt="Image 10">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7291.JPG" alt="Image 11">
+            </div>
+            <div class="mySlides">
+               <img src="src/images/Pics for Jaydon’s group/IMG_7267.JPG" alt="Image 12">
             </div>
          </div>
       </section>
