--- a/Acuerian.html
+++ b/Acuerian.html
@@ -40,7 +40,7 @@
                <p>Our mission is to empower,educate, and engage with  individuals about the power of being mental healthy and having overall knowledge about being mindfully aware. We are committed to providing unparalleled value through engaging events, exceptional service to the community, countless educational opportunities and a mostly importantly an opportunity for members to get involved. Guided by our core values of engagement, collaboration, and serving the community , we strive to be a catalyst for positive change in the communities we serve. Through a culture of continuous learning and adaptability, we aim to exceed expectations, foster lasting relationships, and contribute meaningfully to the awareness and advancement of mental health awareness. At Acuerian, we believe in the transformative power of ingenuity and collaboration, and we are dedicated to shaping a future where everyone is more aware and educated on a mental health.</p>
             </div>
             <div class="mission-image">
-               <img src="/src/images/IMG_1086.jpeg">
+               <img src="/src/images/IMG_1086.jpeg" alt="group-image">
             </div>
          </div>
       </section>
@@ -88,7 +88,7 @@
       <section class="upcoming-events" id="events">
          <h2 class="h2">Upcoming Events</h2>
          <div class="event-container">
-            <iframe src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%230B8043&ctz=America%2FNew_York&title=Upcoming%20Events&showPrint=0&src=YWN1ZXJpYW5sbGNAZ21haWwuY29t&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border-width:0" width="550" height="400" frameborder="0" scrolling="no"></iframe>
+            <iframe title="Upcoming Events" src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%230B8043&ctz=America%2FNew_York&title=Upcoming%20Events&showPrint=0&src=YWN1ZXJpYW5sbGNAZ21haWwuY29t&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border-width:0" width="550" height="400" frameborder="0" scrolling="no"></iframe>
             <div class="image-container">
                <img src="src/images/jmeltzer034 new-2.jpeg" alt="Image 1">
             </div>
