--- a/Acuerian.html
+++ b/Acuerian.html
@@ -12,11 +12,12 @@
       <div class="all" id="p1">
          <input type="checkbox" id="active">
          <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
-         <video autoplay loop muted play-inline preload="metadata" class="back-video">
+         <video autoplay loop muted play-inline preload="metadata" class="back-video" id="vid">
             <source src="src/videos/pexels-mart-production-7565445 (1080p).mp4">
          </video>
          <div class="base">
             <ul>
+               <li><a href="#vid">Home</a></li>
                <li><a href="#about-us">About</a></li>
                <li><a href="#gallery-page">Gallery</a></li>
                <li><a href="#events">Upcoming Events</a></li>
@@ -113,6 +114,7 @@
             <div class="column link">
               <h3>Links</h3>
               <ul>
+                <li><a href="#vid">Home</a></li>
                 <li><a href="#about-us">About</a></li>
                 <li><a href="#gallery-page">Gallery</li>
                 <li><a href="#events">Upcoming Events</a></li>
@@ -133,10 +135,8 @@
           <div class="row copyright">
             <div class="footer-menu">
           
-            <a href="#p1">Home</a>
-            <a href="">F.A.Q</a>
-            <a href="">Cookies Policy</a>
-            <a href="">Terms Of Service</a>
+            <a href="#vid">Home</a>
+            <a href="#foot">F.A.Q</a>
             <a href="#foot">Support</a>
           
             </div>
